# rober

./: .dockerignore  .env.example  .env.sample  .gitignore  AGENTS.md  OKR.md  README.md  docker-compose.humble.yml  docker-compose.remote-cloud-relay.yml
.claude/: CLAUDE.md  settings.json
.codex/: config.toml
.codex/agents/: README.md  registry.toml  (+38 more)
cloud-relay/: README.md  docker-compose.yml
mobile/: README.md  test_mobile_web_entrypoint.py
onboard/: .dockerignore  README.md
onboard/src/ros2_trashbot_interfaces/: CMakeLists.txt
onboard/src/ros2_trashbot_interfaces/action/: Patrol.action
onboard/src/ros2_trashbot_interfaces/msg/: Waypoint.msg  WaypointList.msg
onboard/src/ros2_trashbot_interfaces/srv/: SetTrashBin.srv
onboard/src/ros2_trashbot_interfaces/test/: test_interface_contract_static.py  test_trash_status_contract_static.py
onboard/src/ros2_trashbot_vision/: package.xml  setup.cfg
onboard/src/ros2_trashbot_vision/ros2_trashbot_vision/: vision_sample_manifest.py
onboard/src/ros2_trashbot_vision/test/: test_perception_docs_static.py  test_trash_detector_static.py
pc-tools/: README.md
scripts/: README.md  docker_humble_build.ps1  docker_humble_build.sh  docker_humble_dev.sh  evidence_crosscheck.py  hardware_smoke_wave_rover.py  remote_cloud_relay_docker_smoke.sh  run_smoke_tests.ps1  run_smoke_tests.sh  setup_wsl_ros2_humble.sh
src/ros2_trashbot_behavior/: package.xml  setup.py
src/ros2_trashbot_behavior/ros2_trashbot_behavior/: delivery_navigation.py  delivery_state_machine.py  dropoff_confirmation.py  operator_gateway.py  operator_gateway_diagnostics.py  operator_gateway_http.py  operator_gateway_static.py  remote_bridge.py  remote_bridge_protocol.py  remote_cloud_relay.py  task_orchestrator.py  task_record.py  trash_collection_server.py
src/ros2_trashbot_behavior/test/: test_behavior_package_contract_static.py  test_delivery_navigation.py  test_delivery_state_machine.py  test_dropoff_confirmation.py  test_legacy_trash_collection_server_static.py  test_operator_gateway_diagnostics.py  test_operator_gateway_http.py  test_operator_gateway_static.py  test_patrol_action_contract_static.py  test_remote_bridge.py  test_remote_bridge_protocol.py  test_remote_bridge_static.py  test_remote_cloud_relay.py  test_task_orchestrator_collection_execution.py  test_task_orchestrator_fixed_route_status.py  test_task_orchestrator_patrol_execution.py  test_task_orchestrator_static.py  test_task_record.py  test_trash_collection_action_contract_static.py
src/ros2_trashbot_bringup/: CMakeLists.txt  package.xml
src/ros2_trashbot_bringup/launch/: autonomous.launch.py  bringup.launch.py  learn.launch.py
src/ros2_trashbot_bringup/test/: test_launch_contract_static.py
src/ros2_trashbot_hardware/: package.xml  setup.py
src/ros2_trashbot_hardware/ros2_trashbot_hardware/: esp32_bridge.py  hardware_diagnostics_proof.py
src/ros2_trashbot_hardware/test/: test_waveshare_json_bridge.py
src/ros2_trashbot_nav/: package.xml  setup.py
src/ros2_trashbot_nav/ros2_trashbot_nav/: fixed_route_autonomy.py  keyframe_camera_sim.py  map_recorder.py  nav_to_goal.py  route_csv_to_yaml.py  route_data_recorder.py  route_debug_web.py  route_proof_summary.py  route_utils.py  visual_gate_proof.py  waypoint_manager.py
src/ros2_trashbot_nav/test/: test_fixed_route_dry_run_offline.py  test_fixed_route_status_static.py  test_route_csv_to_yaml.py  test_route_data_recorder_manifest.py  test_route_proof_summary.py  test_visual_gate_proof.py  test_waypoint_manager_learn_mode_static.py
src/ros2_trashbot_vision/: package.xml  setup.py
src/ros2_trashbot_vision/ros2_trashbot_vision/: __init__.py  trash_detector.py
src/ros2_trashbot_vision/test/: test_perception_docs_static.py  test_trash_detector_static.py  test_vision_sample_manifest.py
tests/: __init__.py  test_elevator_field_evidence_trace_callback_intake.py  test_elevator_field_evidence_trace_callback_review_decision.py  test_elevator_field_evidence_trace_callback_review_handoff.py  test_elevator_field_evidence_trace_material_backfill_intake.py  test_elevator_field_evidence_trace_material_backfill_review_decision.py  test_elevator_field_evidence_trace_material_backfill_review_handoff.py  test_field_evidence_rerun_callback_intake.py  test_field_evidence_rerun_callback_review_decision.py  test_field_evidence_rerun_callback_review_handoff.py  test_field_evidence_rerun_execution_callback_intake.py  test_field_evidence_rerun_execution_callback_review_decision.py  test_field_evidence_rerun_execution_callback_review_handoff.py  test_field_evidence_rerun_execution_pack.py  test_field_evidence_rerun_execution_result_intake.py  test_field_evidence_rerun_execution_result_review_decision.py  test_field_evidence_rerun_execution_result_review_handoff.py  test_field_evidence_rerun_handoff_intake.py  test_field_evidence_rerun_material_dispatch.py  test_field_evidence_rerun_queue.py  test_hardware_real_material_escalation_request.py  test_hardware_sensor_hil_entry_callback_review_handoff.py  test_pr5_mandatory_sensor_source_alignment.py  test_pr5_review_thread_closeout_gate.py  test_pr5_vendor_source_review_packet.py  test_pr5_vendor_source_review_reply_dispatch.py  test_real_material_evidence_intake.py  test_real_material_followup_escalation_status.py  test_real_material_readiness_board.py  test_route_task_field_retest_acceptance_brief.py  test_route_task_field_retest_acceptance_execution_callback_intake.py  test_route_task_field_retest_acceptance_execution_callback_review_decision.py  test_route_task_field_retest_acceptance_execution_callback_review_handoff.py  test_route_task_field_retest_acceptance_execution_handoff_intake.py  test_route_task_field_retest_acceptance_execution_pack.py  test_route_task_field_retest_acceptance_execution_rerun_queue.py  test_route_task_field_retest_acceptance_execution_rerun_result_intake.py  test_route_task_field_retest_acceptance_execution_rerun_result_review_decision.py  test_route_task_field_retest_acceptance_execution_rerun_result_review_handoff.py  test_route_task_field_retest_acceptance_review_decision.py  (+2 more)
(+1922 files in other folders)
