<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypen="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_trashbot_behavior</name>
  <version>0.1.0</version>
  <description>Behavior coordination and task orchestration for trashbot</description>
  <maintainer email="trashbot@local">trashbot</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>ros2_trashbot_interfaces</depend>
  <depend>ros2_trashbot_nav</depend>
  <depend>ros2_trashbot_vision</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
