<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypen="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_trashbot_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and configuration for trashbot</description>
  <maintainer email="trashbot@local">trashbot</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2_trashbot_nav</exec_depend>
  <exec_depend>ros2_trashbot_vision</exec_depend>
  <exec_depend>ros2_trashbot_behavior</exec_depend>
  <exec_depend>ros2_trashbot_interfaces</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
