<?xml version="1.0"?>
<package format="3">
  <name>ros2_trashbot_hardware</name>
  <version>0.1.0</version>
  <description>ESP32 serial bridge - translates between ESP32 binary protocol and ROS2 messages</description>
  <maintainer email="trashbot@local">trashbot</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>ros2_trashbot_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
