<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypen="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_trashbot_nav</name>
  <version>0.1.0</version>
  <description>Navigation and waypoint management for trashbot</description>
  <maintainer email="trashbot@local">trashbot</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_simple_commander</depend>
  <depend>ros2_trashbot_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>ament_index_python</depend>
  <depend>tf_transformations</depend>
  <depend>python3-opencv</depend>
  <depend>python3-yaml</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
