<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypen="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_trashbot_vision</name>
  <version>0.1.0</version>
  <description>Vision support package for trashbot; no default detector is shipped in the MVP</description>
  <maintainer email="trashbot@example.com">trashbot</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

